# POE-Div-Card-Optimizer

./: Cargo.toml  README.md
scripts/: .gitignore  clean-up-cards.ts  package-lock.json  package.json
scripts/consts/: cards.ts  maps.ts
scripts/overrides/: card-prices.ts
src/: cards.json  main.rs  main.rs.bak
src/backup/: nChooseM.rs.bak  samping.rs.bak
