[package]
name = "poe_div_card_optimizer"
version = "1.0.0"
edition = "2021"
authors = ["Chandler Ferry <https://github.com/Chandlerferry>"]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
num_cpus = "1.15.0"
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.25"
lazy_static = "1.4.0"
rayon = "1.5"
itertools = "0.12.1"
hashbrown = "0.14.3"
log = "0.4"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1.25", features = ["rt"] }
anyhow = "1"
fern = { version = "0.6", features = ["colored"] }
rand = "0.8.4"